feat: loading spinner added to pokedex

--- a/style.css
+++ b/style.css
@@ -96,6 +96,34 @@ header input {
     background-color: rgb(207, 198, 198);
 }
 
+#loading-overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    overflow: hidden;
+    background-color: rgba(49, 47, 47, 0.9);
+}
+
+.loading-spinner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
+.spinner {
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 .d-none {
     display: none;
 }
